--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Bestand met de apikey
+apikey.txt
+
+# Gevoerd gesprek
+gesprek.txt
+
+# Virtuele omgeving
+ve/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
